難易度の追加完了

--- a/vue_sample/dashboard/index.html
+++ b/vue_sample/dashboard/index.html
@@ -66,7 +66,8 @@
                     <td>{{ line.sumLevel }}</td>
                     <td>
                         <div ng-repeat="action in line.actions">
-                            <img ng-src="{{action.img.src}}"/>
+                            <img ng-src="{{action.imgSrc}}"/>
+                            <p>{{ action.level }}</p>
                         </div>
                     </td>
                 </tr>
