#7 要素削除機能完成

--- a/vue_sample/dashboard/index.html
+++ b/vue_sample/dashboard/index.html
@@ -83,6 +83,7 @@ li {
                     <td>
                         <button ng-click="moveLineUp($index)">up</button>
                         <button ng-click="moveLineDown($index)">down</button>
+                        <button ng-click="removeLine($index)">delete</button>
                     </td>
                 </tr>
               </tbody>
